--- a/sections/follow-us-section.liquid
+++ b/sections/follow-us-section.liquid
@@ -167,6 +167,8 @@
   case font_family_key
     when 'playfair'
       assign font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
