--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -262,6 +262,8 @@
   case heading_font_family_key
     when 'playfair'
       assign heading_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign heading_font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign heading_font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
@@ -281,6 +283,8 @@
   case text_font_family_key
     when 'playfair'
       assign text_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign text_font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign text_font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
