--- a/sections/page-header.liquid
+++ b/sections/page-header.liquid
@@ -98,6 +98,8 @@
   case heading_font_family
     when 'playfair'
       assign heading_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign heading_font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign heading_font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
