--- a/snippets/two-columns-content.liquid
+++ b/snippets/two-columns-content.liquid
@@ -235,6 +235,8 @@
       case heading_font_family
         when 'playfair'
           assign heading_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+        when 'merriweather'
+          assign heading_font_family_value = "'Merriweather', Georgia, serif"
         when 'georgia'
           assign heading_font_family_value = "Georgia, 'Times New Roman', serif"
         when 'times'
@@ -263,6 +265,8 @@
       case subheading_font_family
         when 'playfair'
           assign subheading_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+        when 'merriweather'
+          assign subheading_font_family_value = "'Merriweather', Georgia, serif"
         when 'georgia'
           assign subheading_font_family_value = "Georgia, 'Times New Roman', serif"
         when 'times'
