--- a/sections/custom-text.liquid
+++ b/sections/custom-text.liquid
@@ -311,6 +311,8 @@
   case heading_font_family
     when 'playfair'
       assign heading_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign heading_font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign heading_font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
@@ -330,6 +332,8 @@
   case subheading_font_family
     when 'playfair'
       assign subheading_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign subheading_font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign subheading_font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
@@ -349,6 +353,8 @@
   case text_font_family
     when 'playfair'
       assign text_font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign text_font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign text_font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
