--- a/snippets/font-family-helper.liquid
+++ b/snippets/font-family-helper.liquid
@@ -9,6 +9,8 @@
   case font_family
     when 'playfair'
       assign font_family_value = "'Playfair Display', 'Times New Roman', serif"
+    when 'merriweather'
+      assign font_family_value = "'Merriweather', Georgia, serif"
     when 'georgia'
       assign font_family_value = "Georgia, 'Times New Roman', serif"
     when 'times'
